--- a/react-flask-app/package.json
+++ b/react-flask-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
+    "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1"
